test(android): avoid Files.readString in unit tests
Co-authored-by: Martin DONADIEU <martindonadieu@gmail.com>